--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Home
 
 # Your name to show in the footer
-author: Contributors
+author: WiMCS
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -54,7 +54,7 @@ social-network-links:
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+# rss-description: This website is a virtual proof that I'm awesome
 
 ###########################
 # --- General options --- #
@@ -84,7 +84,7 @@ feed_show_excerpt: true
 feed_show_tags: true
 
 # Add a search button to the navbar
-post_search: true
+post_search: false
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
 edit_page_button: true
