--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
+page-col: "#FFEFF1"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
