--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ page-col: "#FFE4E1"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#ADD8E6"
+navbar-col: "#E0F7FA"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
 footer-col: "#EAEAEA"
@@ -118,9 +118,9 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/background.png"
-footer-img: "/assets/img/background.png"
-page-img: "/assets/img/background.png"
+# navbar-img: "/assets/img/background.png"
+# footer-img: "/assets/img/background.png"
+# page-img: "/assets/img/background.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
