--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Home
 
 # Your name to show in the footer
-author: WiMCS
+author: WiMaCS
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -69,7 +69,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "wimcs.com"
+url-pretty: "wimacs.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
