--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: Home
 
 # Your name to show in the footer
-author: WiMaCS
+author: WiMACS
 
 ###############################################
 # --- List of links in the navigation bar --- #
