--- a/_config.yml
+++ b/_config.yml
@@ -219,6 +219,8 @@ footer-hover-col: "#0085A1"
 # Ruby Date Format to show dates of posts
 date_format: "%B %-d, %Y"
 
+future: true
+
 # Facebook App ID
 #fb_app_id: ""
 
